k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-receptionist
  namespace: ai-receptionist
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: ai-receptionist
  template:
    metadata:
      name: ai-receptionist
      labels:
        app: ai-receptionist
    spec:
      serviceAccountName: ai-receptionist
      containers:
        - name: ai-receptionist
          image: 669294688092.dkr.ecr.ap-south-1.amazonaws.com/ai-receptionist-github-actions:165f6c28aa88fdc31bf77ab39eb5ed0efe70c46b
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
