k8s/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ai-receptionist-network-policy
  namespace: ai-receptionist

spec:
  podSelector:
    matchLabels:
      app: ai-receptionist

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - ports:
        - protocol: TCP
          port: 8000

  egress:
    - ports:
        - protocol: UDP
          port: 53
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system

    - ports:
        - protocol: TCP
          port: 443
